--- a/about/index.html
+++ b/about/index.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/css/core/fonts.css" />
-    <link rel="stylesheet" href="/public/css/core/variables.css" />
-    <link rel="stylesheet" href="/public/css/core/utils.css" />
-    <link rel="stylesheet" href="/public/css/core/components/search-box.css" />
-    <link rel="stylesheet" href="/public/css/core/components/breadcrumb.css" />
-    <link rel="stylesheet" href="/public/css/core/components/logo.css" />
+    <link rel="stylesheet" href="/public/css/base.css" />
     <link rel="stylesheet" href="/public/css/components/header-type-2.css" />
     <link rel="stylesheet" href="/public/css/components/search.css" />
     <link rel="stylesheet" href="/public/css/components/footer.css" />
