--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="./css/core/fonts.css" />
-    <link rel="stylesheet" href="./css/core/variables.css" />
-    <link rel="stylesheet" href="./css/core/utils.css" />
-    <link rel="stylesheet" href="./css/core/animation.css" />
-    <link rel="stylesheet" href="./css/core/components/search-box.css" />
-    <link rel="stylesheet" href="./css/core/components/logo.css" />
+    <link rel="stylesheet" href="./css/base.css" />
     <link rel="stylesheet" href="./css/components/header-type-1.css" />
     <link rel="stylesheet" href="./css/components/mobile-nav.css" />
     <link rel="stylesheet" href="./css/components/hero.css" />
